--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+
   "dependencies": {
-    "auth0-js": "^9.29.0"
+    "auth0-js": "^9.29.0",
+    "vite": "^7.2.0"
   }
 }
