--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.8.0",
     "auth0-js": "^9.29.0",
     "vite": "^7.2.0"
   }
