--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.8.0",
+    "@netlify/vite-plugin": "^2.7.10",
     "auth0-js": "^9.29.0",
     "vite": "^7.2.0"
   }
